<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu2" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu3" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu4" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu5" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu6" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu7" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <CheckBox
                    android:id="@+id/chkMenu8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu8" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgMenu9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />
                <CheckBox
                    android:id="@+id/chkMenu9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu9" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>